# subcommand-sample

./: LICENSE  README.md  pyproject.toml
src/subcommand_sample/cli/: cli.py
src/subcommand_sample/commands/: bar.py  baz.py  foo.py  qux.py
