[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subcommand-sample"
version = "0.0.1"
authors = [
  { name="Together Computer", email="community@together.xyz" },
]
description = "A simple example of a subcommand CLI app"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
]

[project.optional-dependencies]
quality = ["black~=23.1", "ruff>=0.0.241,<=0.0.259", "mypy"]

[project.urls]
"Homepage" = "https://github.com/csris/subcommand-sample"
"Bug Tracker" = "https://github.com/csris/subcommand-sample/issues"

[project.scripts]
sample_cli = "subcommand_sample.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/subcommand_sample"]

[tool.black]
target-version = ['py311']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.mypy]
strict = true
